--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -24,7 +24,7 @@
         </p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.009520783837!2d-76.1360089846363!3d43.04123117914701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a02e41e647%3A0x6a749b42fab05a05!2sSheraton%20Syracuse%20University%20Hotel%20%26%20Conference%20Center!5e0!3m2!1sen!2sus!4v1675302837912!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <br>
-        <form action="" method="post">
+        <form action="https://formspree.io/f/mzbqezoy" method="post">
             <label for="fullname">Full Name:</label>
             <input type="text"  id="fullname" name="fullname">
             <br>
