--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -31,7 +31,7 @@
             
             <label for="Langauge">Select a Langauge:</label> 
             <select name="Langauge" id="Langauge">
-                <option></option>
+                <option value="Select">Select</option>
                 <option value="Java">Java</option>
                 <option value="Python">Python</option>
                 <option value="Haskell">Haskell</option>
