--- a/lab07/index.html
+++ b/lab07/index.html
@@ -7,6 +7,11 @@
     </head>
 
     <body>
+        <nav>
+            <a href="../lab07/index.html" target="_blank">Home</a>   |
+            <a href="../lab06/skills.html" target="_blank">Skills</a> |
+            <a href="../lab06/contact.html" target="_blank">Contact</a>
+        </nav>
 
         <h1>Abdur Cheema's Biography</h1>
 
