--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -7,6 +7,12 @@
     </head>
 
     <body>
+        <nav>
+            <a href="../lab07/index.html">Home</a>   |
+            <a href="../lab06/skills.html">Skills</a> |
+            <a href="../lab06/contact.html">Contact</a>
+        </nav>
+
         <h1>Contact</h1>
         <p>
             Abdur Cheema <br>
