--- a/lab07/index.html
+++ b/lab07/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Abdur Cheema-Bio</title>
-        <link rel="stylesheet" href="../lab07/styles2.css">
+        <link rel="stylesheet" href="styles2.css">
     </head>
 
     <body>
         <nav>
-            <a href="../lab07/index.html" target="_blank">Home</a>  |
-            <a href="../lab06/skills.html" target="_blank">Skills</a> |
-            <a href="../lab06/contact.html" target="_blank">Contact</a>
+            <a href="index.html" target="_blank">Home</a>  |
+            <a href="skills.html" target="_blank">Skills</a> |
+            <a href="contact.html" target="_blank">Contact</a>
         </nav>
 
         <h1>Abdur Cheema's Biography</h1>
