--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>   |
-        <a href="skills.html">Skills</a> |
-        <a href="contact.html">Contact</a>
+        <a href="index.html" target="_blank">Home</a>   |
+        <a href="skills.html" target="_blank">Skills</a> |
+        <a href="contact.html" target="_blank">Contact</a>
     </nav>
     <table>
         <caption>Technical Skills</caption>
