--- a/lab07/index.html
+++ b/lab07/index.html
@@ -8,9 +8,9 @@
 
     <body>
         <nav>
-            <a href="index.html" target="_blank">Home</a>  |
-            <a href="skills.html" target="_blank">Skills</a> |
-            <a href="contact.html" target="_blank">Contact</a>
+            <a href="index.html" >Home</a>  |
+            <a href="skills.html" >Skills</a> |
+            <a href="contact.html" >Contact</a>
         </nav>
 
         <h1>Abdur Cheema's Biography</h1>
