--- a/lab08/index.html
+++ b/lab08/index.html
@@ -15,8 +15,10 @@
 
         <h1>Abdur Cheema's Biography</h1>
 
-        <img src="../images/image11.jpg" alt="My Photo">
+        
 <main>
+    <div class="paragraph">
+        <img src="../images/image11.jpg" alt="My Photo">
         <p >
         My name is Abdur Cheema.I am an undergraduate at Syracuse University. I recently switched my major from computer science to <strong>Information Management & Technology</strong> at I-school. I am interested in IM&T because I want to focus on the web development part of the technology. 
         </p>
@@ -30,7 +32,9 @@
         <p>
         I grew up in Pakistan where I spent 14 years of my life. I immigrated to the United States when I was 14 and started high school in NYC. 
         </p>
-
+    </div>
+    <br>
+    <br>
         <h2>My Hobbies:</h2>
 
         <ul>
@@ -38,6 +42,7 @@
             <li>Read Books</li>
             <li>Hangout with friends</li>
         </ul>
+   
 
 </main>
 
