--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -15,6 +15,7 @@
         <a href="skills.html" >Skills</a> |
         <a href="contact.html" >Contact</a>
     </nav>
+    <section>
     <h1>Technical Skills</h1>
     <p> As an Information Technology Major, I have learned many technical skills. I am proficient in python and I am currently learning HTML. I have also learned microsft Excel.</p>
 
@@ -56,6 +57,7 @@
         </aside>
     </div>
     </div>
+</section>
     
  
 
