--- a/lab14/skills.html
+++ b/lab14/skills.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="styles2.css">
     <script src="https://kit.fontawesome.com/854ac640ba.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
     <header>
@@ -21,7 +26,7 @@
     <a href="#main" class="skip" tabindex="1">Skip to content</a> <!--bookmark tag take you somewere on the page--> <br>
     </header>
     <section>
-    <h1 id="mian" class="title">Technical Skills</h1>
+    <h1 id="mian" class="title">Technical Skills</h1 >
     <p> As an Information Technology Major, I have learned many technical skills. I am proficient in python and I am currently learning HTML. I have also learned microsft Excel.</p>
 
     
