--- a/project7/reviews.html
+++ b/project7/reviews.html
@@ -59,7 +59,9 @@
             <input type="submit" value="Submit">
         </form>
             <br>
+            <footer>
         <p class="last">Thank You for Visiting Our Site</p> 
+    </footer>
         
 </body>
 </html>
