--- a/project7/countries.html
+++ b/project7/countries.html
@@ -160,7 +160,7 @@
         <a href="countries.html">Countries</a>
         <a href="reviews.html">Reviews</a>
     </nav>
-    <h1>Top 10 cities to visit to visit in the World</h2>
+    <h1>Top 10 cities to visit to visit in the World</h1>
         <div class="container1">
         <div class="row2">   
         <div >
@@ -185,7 +185,7 @@
     </div>
     <div class="row2">
         <div>
-            <p>New York</p> <img src="../project/images/New York City.jpeg" alt="NewYorkCity" onmouseover="showSquare3()" onmouseout="hideSquare3()">
+            <p>New York</p> <img src="../project/images/NewYorkCity.jpeg" alt="NewYorkCity" onmouseover="showSquare3()" onmouseout="hideSquare3()">
             <div id="square3">
                 <p>New York City, USA: "The Big Apple" is famous for its skyline, its shopping, its food, and its numerous cultural attractions, such as Central Park, the Metropolitan Museum of Art, and Broadway.</p>
               </div>
@@ -197,7 +197,7 @@
               </div>
         </div>
         <div>
-            <p>Istanbul</p> <img src="../project/images/Turkey Mosque.jpeg" alt="Istanbul" onmouseover="showSquare5()" onmouseout="hideSquare5()">
+            <p>Istanbul</p> <img src="../project/images/TurkeyMosque.jpeg" alt="Istanbul" onmouseover="showSquare5()" onmouseout="hideSquare5()">
             <div id="square5">
                 <p>Istanbul, Turkey: It is a historic city with a rich cultural heritage, reflecting its position as a former capital of the Ottoman Empire. This city straddles two continents and blends Turkish, Ottoman, and Byzantine cultures, with landmarks like the Hagia Sophia, the Topkapi Palace, and the Grand Bazaar.</p>
               </div>
@@ -217,7 +217,7 @@
               </div>
         </div>
         <div>
-            <p>Bangkok</p> <img src="../project/images/Bangkok .jpeg" alt="Bangkok" onmouseover="showSquare8()" onmouseout="hideSquare8()">
+            <p>Bangkok</p> <img src="../project/images/Bangkok.jpeg" alt="Bangkok" onmouseover="showSquare8()" onmouseout="hideSquare8()">
             <div id="square8">
                 <p>Bangkok, Thailand: Bangkok is the capital city of Thailand and one of the most popular tourist destinations in Southeast Asia. Known for its vibrant street life and colorful markets, the city is a hub of activity and excitement, attracting millions of visitors each year. The bustling capital of Thailand is known for its street food, its shopping, its temples and palaces, and its vibrant nightlife.</p>
               </div>
@@ -227,7 +227,7 @@
 
     <div class="row2">
         <div class="container2">
-            <p>Sydney</p> <img src="../project/images/Sydney .jpeg" alt="Sydney"  onmouseover="showSquare9()" onmouseout="hideSquare9()">
+            <p>Sydney</p> <img src="../project/images/Sydney.jpeg" alt="Sydney"  onmouseover="showSquare9()" onmouseout="hideSquare9()">
             <div id="square9">
                 <p>Sydney, Australia: The largest city in Australia is famous for its iconic Opera House and Harbour Bridge, as well as its beaches, parks, and vibrant cultural scene.</p>
               </div>
