--- a/project7/countries.html
+++ b/project7/countries.html
@@ -160,7 +160,7 @@
         <a href="countries.html">Countries</a>
         <a href="reviews.html">Reviews</a>
     </nav>
-    <h1>Top 10 cities to visit to visit in the World</h1>
+    <h1>Top 10 cities to visit in the World</h1>
         <div class="container1">
         <div class="row2">   
         <div >
